Update navbar brand to 'Cricket Wala Play Arena' and complete rebranding

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cricket-box-frontend",
+  "name": "cricket-wala-play-arena-frontend",
   "version": "0.1.0",
   "private": true,
   "scripts": {
