--- a/package.json
+++ b/package.json
@@ -16,19 +16,25 @@
     "@radix-ui/react-slot": "^1.2.4",
     "axios": "^1.13.2",
     "class-variance-authority": "^0.7.1",
+    "cloudinary": "^2.8.0",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.23.26",
     "lucide-react": "^0.559.0",
     "mongoose": "^9.0.1",
     "next": "^14.0.4",
+    "next-cloudinary": "^6.17.5",
+    "nodemailer": "^6.10.1",
+    "razorpay": "^2.9.6",
     "react": "^18.2.0",
     "react-day-picker": "^9.12.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.5.0",
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
     "@types/node": "^20.10.6",
+    "@types/nodemailer": "^6.4.21",
     "@types/react": "^18.2.46",
     "@types/react-dom": "^18.2.18",
     "autoprefixer": "^10.4.16",
