Fixed payment flow: slots only booked after payment, multiple slots display correctly

--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,10 @@ MONGODB_URI=mongodb://localhost:27017/cricketbox
 RAZORPAY_KEY_ID=your_razorpay_key_id
 RAZORPAY_KEY_SECRET=your_razorpay_key_secret
 
+# Testing Configuration
+# Set to 1 for testing with ₹1 payment, remove or comment out for actual prices
+NEXT_PUBLIC_TEST_PRICE_PER_HOUR=1
+
 # Email Configuration (Gmail or Custom SMTP)
 # For Gmail: Use App Password (2FA enabled account)
 EMAIL_USER=your_email@gmail.com
