Update address to Kanti Factory Patna, add contact bar, remove icon buttons, fix build errors

--- a/package.json
+++ b/package.json
@@ -20,9 +20,13 @@
     "cloudinary": "^2.8.0",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "dns2": "^2.1.0",
+    "dotenv": "^17.2.3",
     "framer-motion": "^12.23.26",
+    "jsonwebtoken": "^9.0.3",
     "lucide-react": "^0.559.0",
-    "mongoose": "^9.0.1",
+    "mongodb-connection-string-url": "^7.0.0",
+    "mongoose": "^9.1.4",
     "next": "^14.0.4",
     "next-cloudinary": "^6.17.5",
     "nodemailer": "^6.10.1",
@@ -35,6 +39,7 @@
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20.10.6",
     "@types/nodemailer": "^6.4.21",
     "@types/react": "^18.2.46",
