--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "next": "^14.0.4",
     "next-cloudinary": "^6.17.5",
     "nodemailer": "^6.10.1",
+    "pdf-lib": "^1.17.1",
     "razorpay": "^2.9.6",
     "react": "^18.2.0",
     "react-day-picker": "^9.12.0",
